@@ -1,6 +1,7 @@
 package org.serratec.h2.grupo2.security;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.serratec.h2.grupo2.exception.CustomAccessDeniedHandler;
 import org.serratec.h2.grupo2.exception.CustomAuthenticationEntryPoint;
@@ -115,7 +116,9 @@ public class WebSecurityConfig {
 	CorsConfigurationSource corsConfigurationsource() {
 		CorsConfiguration corsConfiguraion = new CorsConfiguration();
 		corsConfiguraion.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
-		corsConfiguraion.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD"));
+		corsConfiguraion.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD", "PATCH"));
+		corsConfiguraion.setAllowedHeaders(List.of("*"));
+		corsConfiguraion.setAllowCredentials(true);
 		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 		source.registerCorsConfiguration("/**", corsConfiguraion.applyPermitDefaultValues());
 		return source;
